DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Oct-18-2004 allenb      Refactored how GL and Performer windows allow event
                        input.  They now work with a window registry
                        in gadgeteer to allow event sampling from event window
                        "devices".  Note: this only works on X.
                        Win32 is currently broken.
                        NEW VERSION 1.1.160
Oct-11-2004 patrickh    Updated to require VPR 0.40.1, the first version that
                        fully eliminates the need for NSPR on Mac OS X.
Oct-11-2004 patrickh    Updated to require VPR 0.40.0.
                        NEW VERSION 1.1.159
Oct-01-2004 patrickh    Handle the case when it is necessary to link against
                        the XFree86/X.org library libXxf86vm explicitly.
Sep-24-2004 aronb       Updated to require Gadgeteer 0.17.0 in order to fix a
                        cluster device data sharing bug.
                        NEW VERSION 1.1.158
Sep-17-2004 patrickh    Updated to require JCCL 0.18.0.  The only change is
                        that all the .jdef files are now using version 3.1 of
                        the config definition file format.
                        NEW VERSION 1.1.157
Sep-11-2004 patrickh    Updated for JDOM 1.0.
                        NEW VERSION 1.1.156
Aug-04-2004 dshipton    Added in PerformanceMediator into Juggler kernel
                        loop.
                        NEW VERSION 1.1.155
Jul-28-2004 patrickh    Added the first version of the display window custom
                        editor to the VRJConfig Control Panel.
Jul-12-2004 patrickh    Began adding very basic exception handling to the
                        kernel.
                        NEW VERSION: 1.1.154
Jun-06-2004 patrickh    Refactored surface viewport configurations to remove